.env file and DB setup

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Lumen
-APP_ENV=local
-APP_KEY=
+APP_NAME=AdvancedStreamStats
+APP_ENV=production
+APP_KEY=Pg4RCH4buvI58qaW1ODVWj2oqp4XuUM4
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://harrysoftechhub.com
 APP_TIMEZONE=UTC
 
 LOG_CHANNEL=stack
@@ -11,9 +11,9 @@ LOG_SLACK_WEBHOOK_URL=
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=advstreamstats
+DB_USERNAME=advstreams_usr
+DB_PASSWORD=Tiger@000
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
