--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=AdvancedStreamStats
 APP_ENV=production
 APP_KEY=Pg4RCH4buvI58qaW1ODVWj2oqp4XuUM4
 APP_DEBUG=true
-APP_URL=https://harrysoftechhub.com
+APP_URL=https://api.harrysoftechhub.com
 APP_TIMEZONE=UTC
 
 LOG_CHANNEL=stack
@@ -11,9 +11,20 @@ LOG_SLACK_WEBHOOK_URL=
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=advstreamstats
-DB_USERNAME=advstreams_usr
+DB_DATABASE=u694737167_advstreamstats
+DB_USERNAME=u694737167_advstreams_usr
 DB_PASSWORD=Tiger@000
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
+
+DATE_FORMAT=Y-m-d
+DATETIME_FORMAT="Y-m-d H:i:s"
+ACCESS_TOKEN_EXPIRE_INTERVAL=+60minutes
+REFRESH_TOKEN_EXPIRE_INTERVAL=+30days
+GRANT_CLIENT_CREDENTIALS=client_credentials
+GRANT_PASSWORD=password
+GRANT_REFRESH_TOKEN=refresh_token
+JWT_ALG=HS256
+REFRESH_TIMEOUT_SECONDS=60
+TOKEN_TYPE=Bearer
