--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^7.3|^8.0",
+        "braintree/braintree_php": "^6.9",
         "firebase/php-jwt": "^6.3",
         "laravel/lumen-framework": "^8.3.1"
     },
