--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^7.3|^8.0",
         "braintree/braintree_php": "^6.9",
         "firebase/php-jwt": "^6.3",
+        "flipbox/lumen-generator": "^9.1",
         "laravel/lumen-framework": "^8.3.1"
     },
     "require-dev": {
